# S3LightFixes

./: .gitignore  Cargo.toml  Readme.md
.github/workflows/: aur.yml  createRelease.yml  dependent.yml  discord.yml  publish.yml  release.yaml
src/: default.rs  lib.rs  light_args.rs  light_config.rs  light_override.rs  main.rs
