[package]
name = "s3lightfixes"
authors = ["Dave Corley", "MOMW Contributors"]
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
palette = "0.7.6"
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.22"

[target.'cfg(not(target_os = "android"))'.dependencies]
native-dialog = "0.9.0"

[dependencies.openmw-cfg]
git = "https://gitlab.com/magicaldave1/openmw-cfg"
branch = "master"

[dependencies.tes3]
git = "https://github.com/Greatness7/tes3"
branch = "dev"
features = ["esp"]
