[package]
name = "s3lightfixes"
authors = ["Dave Corley", "MOMW Contributors"]
version = "0.4.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
palette = "0.7.6"
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.23"

[target.'cfg(not(target_os = "android"))'.dependencies]
native-dialog = "0.9.0"

[dependencies.openmw-config]
git = "https://github.com/magicaldave/Openmw_Config.git"

[dependencies.vfstool_lib]
version = "0.1.0"

[dependencies.tes3]
git = "https://github.com/Greatness7/tes3"
branch = "main"
features = ["esp"]
