[package]
name = "s3lightfixes"
authors = ["Dave Corley", "MOMW Contributors"]
version = "0.4.5"
edition = "2024"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
ordered_hash_map = "0.5.0"
palette = "0.7.6"
rayon = "1.11.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"

[target.'cfg(not(target_os = "android"))'.dependencies]
native-dialog = "=0.9.0"

[dependencies.openmw-config]
version = "0.1.92"
# git = "https://github.com/magicaldave/Openmw_Config.git"
# path = "../openmw-cfg"

[dependencies.vfstool_lib]
version = "0.2.3"

[dependencies.tes3]
git = "https://github.com/Greatness7/tes3"
branch = "main"
features = ["esp"]
